--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/async-storage": "~1.11.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.10.2",
+    "axios": "^0.21.0",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
     "install": "^0.13.0",
